# m3k-normalizator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  build.bat  bump.bat  sim_normalizer.py  sim_pump.py  sim_pump2.py  verify_comp.py  verify_fader.py  verify_limiter.py  verify_measurement.py
.claude/: settings.local.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Standalone.cpp
installer/: M3KNormalizator.iss
